--- a/.stumpwmrc
+++ b/.stumpwmrc
@@ -6,38 +6,100 @@
 (load-module "cpu")
 (load-module "battery-portable")
 (load-module "amixer")
+;;(load-module "wifi") ;; depends on alexandria
 
-(define-key *top-map* (kbd "XF86AudioLowerVolume") "amixer-Master-1-")
-(define-key *top-map* (kbd "XF86AudioRaiseVolume") "amixer-Master-1+")
-(define-key *top-map* (kbd "XF86AudioMute") "amixer-Master-toggle pulse")
+
 ;; good tutorial: https://wxww.reddit.com/r/stumpwm/comments/1gzg6a/modules_and_now_playing_on_the_mode_line/
 ;; list available formatters with: *screen-mode-line-formatters*
 ;; https://github.com/stumpwm/stumpwm-contrib
 ;;
 ;(load "/home/ben/git/stumpwm/contrib/cpu.lisp")
+;; todo: https://github.com/kostafey/dotfiles/blob/master/.stumpwmrc
+;; (defmacro bind-shell-to-key (key command &optional (map *root-map*))
+;;  `(define-key ,map (kbd ,key) (concatenate 'string
+;;                                            "run-shell-command "
+;;                                            ,command)))
+
+;;(bind-shell-to-key "C" "xfce4-settings-manager")
+;; lock screen (bind-shell-to-key "l" "xscreensaver-command -lock; systemctl suspend")
+;; number of padding pixels between the modeline text and the top/bottom of
+;; the modeline
+(setf *mode-line-pad-y* 0)
+
+;; modeline background color
+(setf *mode-line-background-color* "black")
+
+;; (define-key *root-map* (kbd "I") "trader-workstation")
+(define-key *top-map* (kbd "XF86AudioLowerVolume") "amixer-Master-1-")
+(define-key *top-map* (kbd "XF86AudioRaiseVolume") "amixer-Master-1+")
+(define-key *top-map* (kbd "XF86AudioMute") "amixer-Master-toggle pulse")
+
+(define-key *root-map* (kbd "1") "only")
+(define-key *root-map* (kbd "2") "vsplit")
+(define-key *root-map* (kbd "3") "hsplit")
+(define-key *root-map* (kbd "0") "remove")
+
+(define-key *top-map* (kbd "M-F4") "delete")
+(define-key stumpwm:*top-map* (stumpwm:kbd "F12") "mode-line")
+(define-key stumpwm:*top-map* (stumpwm:kbd "M-Down") "pull-hidden-previous")
+(define-key stumpwm:*top-map* (stumpwm:kbd "M-Up") "pull-hidden-next")
+;(define-key *root-map* (kbd "i") "status")
+;(define-key *root-map* (kbd "B") "banish-window")
+;(define-key *root-map* (kbd "S-Left") "move-window left")
+;(define-key *root-map* (kbd "S-Right") "move-window right")
+;(define-key *root-map* (kbd "S-Up") "move-window up")
+;(define-key *root-map* (kbd "S-Down") "move-window down")
+;(define-key *root-map* (kbd "!") "exec dmenu_run -i -b -nb '#000' -nf '#0F0' -sb '#111' -sf '#F0F' -fn '-*-helvetica-bold-r-*-*-20-*-*-*-*-*-*-*'")
+
+;; mpc stuff
+;(define-key *root-map* (kbd "C-p") "exec emacsclient -e '(emms-pause)'")
+;; make my default groups
+;(run-commands
+;; "gnew background"
+;; "gselect Default")
+
+;; switching define
+(frames-key *top-map*  (kbd "M-Page_Down") "fnext")
+
+(define-key *root-map* (kbd "M-x") "colon")
+(define-key *root-map* (kbd "M-r") "exec")
+
+;; jaderholm.com
+
 
 (setf *window-format* "%m%n%s%c")
 (setf *screen-mode-line-format*
       (list
-       "[^B%n^b] " ;; group number
-       "%W " ;; windows
-       "^>%d " ;; date
-       "| %C | " ;; cpu
+       "[^B%n^b]" ;; group number
+       " %W" ;; windows
+       " ^>%d" ;; date
+       " | %C |" ;; cpu
        ;; todo: add unread mail
        ;; todo: add pomodoro timer and pomodoro message
-       "%B" ;; Battery
+       " %B" ;; Battery
+;;       " %I" ;; Wifi
        ))
 
 (setf *time-modeline-string* "%a %b %e %k:%M")
 
-(define-key *root-map* (kbd "M-x") "colon")
-(define-key *root-map* (kbd "M-r") "exec")
+
 ;; Groups
 ;; TODO: group switch to predefined, otherwise initiate
 ;; TODO: group 1, web browser, 2 emacs
+;; TODO: window placement rules, http://www.xsteve.at/prg/stumpwm/
 
-;; enable modeline, must be put at end
+;; Rename the first group to Browse and create the other groups.
+;; Found at: http://en.wikipedia.org/wiki/User:Gwern/.stumpwmrc
+(setf (group-name (first (screen-groups (current-screen)))) "Browse")
+(run-commands "gnewbg Edit" "gnewbg Term" "gnewbg Comms" "gnewbg Misc")
+
+;; enable modeline, must be put at endhttp://www.xsteve.at/prg/stumpwm/
 (enable-mode-line (current-screen) (current-head) t)
+;; change keyboard bindings
+(run-shell-command "setxkbmap dvorak")
+;; wallpaper
+(stumpwm:run-shell-command "display -window root '/home/ben/Pictures/animlookdist.png'")
+
 
 ;; holding down keys: https://www.reddit.com/r/stumpwm/comments/2ph3nj/any_good_tutorial_about_stumpwm_any_tips/
 ;; xsteve http://www.xsteve.at/prg/stumpwm/
@@ -47,3 +109,11 @@
 ;; https://github.com/stumpwm/stumpwm/blob/master/sample-stumpwmrc.lisp
 ;; tips and tricks https://github.com/stumpwm/stumpwm/wiki/TipsAndTricks
 ;; http://ardumont.github.io/howto-install-stumpwm
+
+;; interesting start-menu app: https://gist.github.com/denlab/1062234
+
+
+;; Change the prefix key
+;; keycode 115 = F20 in ~/.xmodmaprc, 115 being the left "windows" key.
+;(set-prefix-key (kbd "F20"))
+
