--- a/.stumpwmrc
+++ b/.stumpwmrc
@@ -1,4 +1,4 @@
-;; -*-lisp-*-
+; -*-lisp-*-
 (in-package :stumpwm)
 
 ;; load modules
@@ -100,7 +100,7 @@
 ;; enable modeline, must be put at endhttp://www.xsteve.at/prg/stumpwm/
 (enable-mode-line (current-screen) (current-head) t)
 ;; change keyboard bindings
-(run-shell-command "setxkbmap dvorak")
+(run-shell-command "setxkbmap us")
 ;; wallpaper
 ;(stumpwm:run-shell-command "display -window root '/home/ben/Pictures/animlookdist.png'")
 
@@ -127,9 +127,17 @@
 (defcommand run-emacs () ()
   (run-shell-command "emacsclient -c -a \"\""))
 
-(define-key *root-map* (kbd "c") "run-terminal")
+(define-key *root-map* (kbd "C-c") "run-terminal")
 (defcommand run-terminal () ()
   (run-shell-command "io.elementary.terminal"))
+
+(defcommand chromium () ()
+  "Start chromium or switch to it, if it is already running."
+  (run-or-raise "chromium" '(:class "Chromium")))
+(define-key *root-map* (kbd "c") "chromium")
+
+(define-remapped-keys '(("Chromium" ("C-f"   . "Right")  ("M-b"."C-Left") ("M-f"."C-Right") ("C-b"   . "Left") ("C-n" . "Down") ("C-p" . "Up") ("M-<"   . "Home")  ("M->"   . "End")  ("C-v"   . "Next") ("M-v"   . "Prior")  ("M-w"   . "C-c") ("C-w"   . "C-x") ("C-y"   . "C-v") ("C-s"   . "C-f") ("M-s"   . "M-f") )))
+   
 
 ;; the illusive defapp command from here: https://github.com/NicolasPetton/stumpwm.d/blob/master/utils.lisp
 ;(defmacro defapp (command &optional win-class)
